<resources>
    <string name="app_name">Wits SRC Connect</string>
    <string name="log_in_helper">Log in as:</string>
    <string name="student">Student</string>
    <string name="src_member">SRC Member</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="log_in">Log In</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="stud_num">Student Number:</string>
    <string name="name">Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="confirm_pass">Confirm Password:</string>
    <string name="register">Register</string>
    <string name="reg_stud">Register Student</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="src_activity_time_line">SRC Activities Timeline</string>
    <string name="src_post_activity">Post Activity</string>
    <string name="activity">Activity</string>
    <string name="title">Title</string>
    <string name="src_polls">SRC Polls</string>
    <string name="poll_activity">Poll Activity</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>
    <string name="comment">Comment</string>
    <string name="view_comments">view Comments</string>
    <string name="student_anonymity">Anonymous Comment</string>
    <string name="poll_desc">Poll Description</string>
    <string name="src_post_poll">Post Poll</string>
    <string name="poll_type">Poll Type:</string>
    <string name="single_select_desc">Single Select\nWhen selected this allows students to select only one option when voting</string>
    <string name="multi_select_desc">Multi Select\nWhen selected this allows students to select more than one option when voting</string>
    <string name="add_option">add option</string>
    <string name="vote">vote</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="update_activity">Update Activity</string>
</resources>
