<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="7dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/src_activity_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:layout_margin="8dp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/src_activity_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/activity"
                    android:background="@android:color/transparent"
                    android:layout_margin="10dp"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/src_post_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/src_post_activity"
        android:textAllCaps="false"
        android:background="@android:color/transparent"/>
</LinearLayout>