<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/comment_view_activity_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/view_comments"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/comment_view_activity_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="something to testwith"/>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:src="@drawable/dotted_line"
        android:layerType="software"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="5dp">

        <LinearLayout
            android:id="@+id/comments_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"/>

    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:src="@drawable/dotted_line"
        android:layerType="software"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/anonymity_switch_vc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layoutDirection="rtl"
        android:text="@string/student_anonymity"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_comment_vc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment"
                android:background="@android:color/transparent"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/send_comment_vc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_send"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"/>
    </LinearLayout>

</LinearLayout>